# agri-yield

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  LICENSE  README.md  UPGRADE.md  artifacts.py  artifacts2.py  check.py  check_uri.py  docker-compose.yml  dockerfile  generate_data.py  main.py  mlflow.db  promote.py  promote3.py  pyproject.toml  render.yaml  test_lint.py
.dvc/: config
.github/workflows/: ci.yml  deploy.yml  retrain-trigger.yml
contracts/: feature_schema.yaml  ndvi_expectations.py  sensor_expectations.py  weather_expectations.py
contracts/schemas/: satellite_ndvi.avsc  soil_sensor.avsc  weather_event.avsc
data/features/: .gitignore  weekly_field_features.dvc
data/prediction_logs/: predictions.jsonl
data/seed/: uk_fields.csv
docs/: PRODUCTION_ROADMAP.md  architecture.md  model_card_template.md  phase-6-frontend.md  phase4_serving.md
features/: README.md  build_weekly_features.py
features/feast_repo/: canary_test.py
features/feast_repo/feature_repo/: feature_repo.py  feature_store.yaml  test_workflow.py
features/feast_repo/feature_repo/data/features/soil_weekly_features/: placeholder.parquet
features/feast_repo/feature_repo/data/features/vegetation_weekly_features/: placeholder.parquet
features/spark_jobs/: join_weekly_features.py  ndvi_weekly_features.py  smoke_test.py  soil_weekly_features.py  weather_weekly_features.py
frontend/: index.html  vercel.json
helm/: README.md
helm/agri-yield-serving/: Chart.yaml  values.yaml
helm/agri-yield-serving/templates/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
infra/: README.md  main.tf  prometheus.yml
infra/kafka/: kafka-cluster.yaml  kafka-nodepool.yaml  schema-registry.yaml  topics.yaml
infra/spark/: smoke-test.yaml
ingestion/: nasa_power_historical.py  ndvi_puller.py  openmeteo_live.py  sensor_simulator.py  weather_poller.py
mlruns/1/models/m-5122c891e0d9410d9a2db601cefadca2/artifacts/: MLmodel  model.pkl  python_env.yaml  requirements.txt
mlruns/1/models/m-5b6c8e26deff4619a82b3456895cd299/artifacts/: MLmodel  model.ubj
mlruns/1/models/m-76e71d3c887d4bdda7e415f7fff3886d/artifacts/: MLmodel  conda.yaml  model.ubj
mlruns/1/models/m-9221d3e8a0e34bb1bb02c189078fa1de/artifacts/: MLmodel  registered_model_meta
monitoring/: alerts.py  drift_logic.py  drift_reports.py  metrics_store.py  prometheus.yml  prometheus_metrics.py  psi_detector.py  reference_cache.py
monitoring/grafana/: agri_yield_dashboard.json
orchestration/: README.md  ingest_flow.py  ingestion_flow.py  materialise_flow.py  materialize.py  monitoring_flow.py  promotion_flow.py  retrain_trigger_flow.py  training_flow.py  weekly_pipeline_flow.py
scripts/: download_cycless.py  quality_gate.py
serving/: app.py  explainability.py  feast_client.py  health.py  logging_sink.py  metrics.py  model.py  schemas.py  version.py
serving/static/: index.html
tests/: conftest.py  test_api.py  test_ci_bounds.py  test_drift.py  test_features.py  test_metrics.py  test_model.py  test_model_bundle.py  test_model_card.py  test_splits.py
training/: baseline.py  data_loader.py  model_bundle.py  prepare_real_data.py  promote.py  train.py  train_and_export.py  tune.py
training/utils/: features.py  metrics.py  model_card.py  splits.py
(+1 files in other folders)
