[project]
name = "agri-yield"
version = "0.1.0"
description = "Agricultural yield prediction MLOps platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.14.0",
    "dvc[gdrive,s3]>=3.67.1",
    "evidently>=0.7.21",
    "fastapi>=0.136.1",
    "feast>=0.62.0",
    "grafana-api>=1.0.3",
    "great-expectations>=1.17.0",
    "mlflow>=3.11.1",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "prefect>=3",
    "prometheus-client>=0.25.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "redis>=5.2.1",
    "requests>=2.33.1",
    "scikit-learn>=1.6.0",
    "shapely>=2.1.2",
    "tenacity>=8.5.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "faker>=40.15.0",
    "hatchling>=1.29.0",
    "httpx>=0.28.0",
    "mypy>=1.20.2",
    "pandas-stubs>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.12",
    "types-requests>=2.33.0.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "contracts",
    "orchestration",
    "ingestion",
    "features",
    "serving",
    "monitoring",
    "infra",
    "training",
]

[tool.uv]
package = true

[tool.mypy]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    # Third-party libs with no stubs — ignore cleanly
    "requests",
    "requests.*",
    "feast.*",
    "pyspark.*",
    "kafka.*",
    "confluent_kafka.*",
    "sklearn.*",
    "xgboost.*",
    "evidently.*",
    "rasterio.*",
    "mlflow.*",
    "optuna.*",
    "prefect.*",
    "prometheus_client.*",
    "prometheus_fastapi_instrumentator.*",
    "great_expectations.*",
    "shapely.*",
    "pystac_client.*",
    "grafana_api.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
